feat: like exercise handler
